syntax = "proto3";

package accounts.register.email.response;

enum Error {
    INVALID_EMAIL = 0;
    REGISTERED_EMAIL = 1;
    EMAIL_FAILED = 2;
    TOO_MANY_REQUESTS = 3;
    SERVER_ERROR = 4;
}

message Response {
  oneof response_field {
    Error error = 1;
    string token = 2;
  }
}

